# medrag-cdv

./: .gitignore  README.md  pyproject.toml
notebooks/: 03_qualitative_analysis.ipynb
plan/: decisions.md  plan.md  proposal.md
results/: metrics.csv  results.md
results/runs/: bm25.jsonl  dense.jsonl  entity.jsonl  none.jsonl
src/: case_selection.py  chunking.py  entity.py  evaluation.py  generation.py  indexing.py  passages.py  pipeline.py  plotting.py
src/data/: models.py  parse_medquad.py
src/retrievers/: __init__.py  bm25.py  dense.py  entity_aware.py
tests/: test_bm25.py  test_entity_aware.py  test_evaluation.py  test_generation.py  test_indexing.py  test_parse_medquad.py
