[project]
name = "medrag-cdv"
version = "0.1.0"
description = "Entity-aware medical RAG, CDV-inspired (Arnold et al., WWW 2020)"
readme = "README.md"
requires-python = ">=3.11,<3.12"
authors = [
    { name = "Leonie Zeller", email = "ljk.zeller@gmail.com" },
    { name = "Naeem Bashir" },
]

dependencies = [
    # Retrieval / embeddings
    "langchain>=0.3,<0.4",
    "langchain-community>=0.3,<0.4",
    "langchain-huggingface>=0.1,<0.2",
    "sentence-transformers>=3.0,<4.0",
    "faiss-cpu>=1.8",
    "rank-bm25>=0.2.2",
    # Entity linking
    "scispacy==0.5.4",
    "spacy>=3.7,<3.8",
    # Generation
    "langchain-ollama>=0.2",
    # Data / utils
    "pydantic>=2.7",
    "requests>=2.31",
    "tqdm>=4.66",
    "numpy>=1.26,<2",
    "pandas>=2.2",
    # Evaluation
    "rouge-score>=0.1.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "jupyter>=1.0",
    "ipykernel>=6.29",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "slow: integration tests that hit the network or load large models",
]
